[package]
name = "Rust_Assignment"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
bytes = "1.4"
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "drift_report"
harness = false

[[bench]]
name = "sync_contention"
harness = false

[[bench]]
name = "tail_latency_compare"
harness = false
